--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/6C52AAEF46'>Semios - Jobs: Data Infrastructure Engineer - Apply online</a></h5> 
+<h5><a href='https://semios.workable.com/j/6C52AAEF46'>Semios - Jobs: Data Infrastructure Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -187,7 +187,7 @@ and self-confident every single day by combining best in class technology,?...</
 <p>3 days ago ... iOS Software Engineer. San Francisco, CA. Engineering ? Subscriptions. Full-
 time. Apply for this job. Quizlet's mission is to help students (and their teachers)?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://external-keywcorp.icims.com/jobs/19721/ios-software-vulnerability-engineer/job'>iOS Software Vulnerability Engineer in Fort Meade, Maryland ...</a></h5> 
+<h5><a href='https://external-keywcorp.icims.com/jobs/19721/ios-software-vulnerability-engineer/job'>iOS Software Vulnerability Engineer in Fort Meade, Maryland ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... ... responsibility for the instruction, assigning, direction, and monitoring of the 
 performance of assigned systems developers / analyst working on a specific 
@@ -362,7 +362,7 @@ and wearables, and translates these into activities and behavioural patterns.</p
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... we provide the tools. Senior Software Engineer - Open Banking | Dublin, Ireland 
 ... Senior Engineer, Software Engineering | Dublin, Ireland ? Senior Engineer?...</p>
@@ -410,7 +410,7 @@ they love. Our product combines data science, software engineering and UX?...</p
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://pressreader.workable.com/j/EAE2DCA0B9'>PressReader - Jobs: iOS Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pressreader.workable.com/j/EAE2DCA0B9'>PressReader - Jobs: iOS Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Richmond Canada Vancouver Dublin</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -426,7 +426,7 @@ they love. Our product combines data science, software engineering and UX?...</p
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Apply online for the job of Android/iOS Engineer at Codelitt Incubator.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/54e670e2-7432-45e6-860f-762904f4afe6'>GOJEK - iOS Engineer, Transport</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/54e670e2-7432-45e6-860f-762904f4afe6'>GOJEK - iOS Engineer, Transport</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
